--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -2,7 +2,7 @@
 
 $card-border-radius: 4px;
 
-li.task-item {
+li.card-item {
   background-color: white;
   padding: $gap;
   border-radius: $card-border-radius;
@@ -11,7 +11,7 @@ li.task-item {
     margin-bottom: $gap;
   }
 
-  img {
+  img.card-cover {
     display: block;
     width: calc(100% + 2 * #{$gap});
     margin: -$gap 0 $gap (-$gap);
