--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -39,7 +39,7 @@ $list-bg-color: #ebecf0;
       border-bottom-right-radius: $column-border-radius;
     }
 
-    ul.task-list {
+    ul.card-list {
       list-style: none;
       margin: 0;
       max-height: calc(
