implement drag and drop

--- a/src/_setting.scss
+++ b/src/_setting.scss
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap");
 
 $gap: 10px;
+$navbar-app-height: 4vh;
+$navbar-board-height: 5vh;
+$board-content-height: 90vh;
 
 // colors
 $board-bg-color: #0079bf;
