--- a/src/_setting.scss
+++ b/src/_setting.scss
@@ -3,9 +3,11 @@
 $gap: 10px;
 $navbar-app-height: 4vh;
 $navbar-board-height: 5vh;
-$board-content-height: 90vh;
+$board-content-height: 88vh;
+$column-border-radius: 4px;
 
 // colors
+$app-main-text-color: #333;
 $board-bg-color: #0079bf;
 $common-element-bg: rgba(255, 255, 255, 0.24);
 
