--- a/src/_setting.scss
+++ b/src/_setting.scss
@@ -10,6 +10,8 @@ $column-border-radius: 4px;
 $app-main-text-color: #333;
 $board-bg-color: #0079bf;
 $common-element-bg: rgba(255, 255, 255, 0.24);
+$column-bg-color: #ebecf0;
+$alert-danger: #ee5253;
 
 
 // Screen
