--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -5,6 +5,10 @@
   overflow-x: auto;
   overflow-y: hidden;
   display: flex;
+  &::after {
+    content: '';
+    flex: 0 0 $gap;
+  }
   
   &::-webkit-scrollbar {
     -webkit-appearance: none;
@@ -27,7 +31,7 @@
 
   .add-new-column {
     width: 250px;
-    height: 32px;
+    max-width: 250px;
     line-height: 32px;
     padding: 4px 0 4px 15px;
     cursor: pointer;
@@ -39,6 +43,32 @@
 
     &:hover {
       background-color: hsla(0, 0, 100%, 0.34);
+    }
+  }
+
+  .enter-new-column {
+    width: 250px;
+    max-width: 250px;
+    background-color: $column-bg-color;
+    line-height: 32px;
+    padding: 4px 10px;
+    margin-left: $gap;
+    border-radius: $column-border-radius;
+
+    input.input-enter-new-column {
+      margin: 5px 0;
+    }
+
+    span.cancel-new-column {
+      margin-left: $gap;
+      cursor: pointer;
+      i {
+        font-size: 18px;
+        color: $alert-danger;
+        &:hover {
+          color: darken($color: $alert-danger, $amount: 10);
+        }
+      }
     }
   }
 }
