--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -3,7 +3,7 @@
 $column-header-height: 46px;
 $column-footer-height: 46px;
 
-$list-bg-color: #ebecf0;
+
 $column-height: calc(#{$board-content-height} - #{$gap * 2});
 
 .column {
@@ -12,7 +12,7 @@ $column-height: calc(#{$board-content-height} - #{$gap * 2});
     height: $column-height;
     margin-left: $gap;
     > * {
-      background-color: $list-bg-color;
+      background-color: $column-bg-color;
       padding: 0 8px;
     }
 
@@ -38,7 +38,7 @@ $column-height: calc(#{$board-content-height} - #{$gap * 2});
       color: #888;
 
       .footer-action {
-        margin-left: $gap;
+        margin-left: 5px;
         cursor: pointer;
         &:hover {
           color: $app-main-text-color;
@@ -63,8 +63,8 @@ $column-height: calc(#{$board-content-height} - #{$gap * 2});
       }
 
       &::-webkit-scrollbar-thumb {
-        background-color: darken($list-bg-color, 15);
-        border-right: 5px solid $list-bg-color;
+        background-color: darken($column-bg-color, 15);
+        border-right: 5px solid $column-bg-color;
       }
 
       .card-ghost {
