--- a/src/_setting.scss
+++ b/src/_setting.scss
@@ -12,6 +12,7 @@ $board-bg-color: #0079bf;
 $common-element-bg: rgba(255, 255, 255, 0.24);
 $column-bg-color: #ebecf0;
 $alert-danger: #ee5253;
+$input-border-color: #0079bf;
 
 
 // Screen
