--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -57,6 +57,9 @@
 
     input.input-enter-new-column {
       margin: 5px 0;
+      &:focus {
+        border-color: $input-border-color;
+      }
     }
 
     span.cancel-new-column {
