--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -70,6 +70,7 @@ $column-height: calc(#{$board-content-height} - #{$gap * 2});
     footer {
       padding-left: 10px;
       height: $column-footer-height;
+      min-height: $gap;
       line-height: $column-footer-height;
       font-size: 16px;
       font-weight: bold;
@@ -123,6 +124,13 @@ $column-height: calc(#{$board-content-height} - #{$gap * 2});
         background-color: rgba(150, 150, 200, 0.1);
         border: 1px dashed #abc;
         margin: 5px;
+      }
+
+      .add-new-card-area {
+        .textarea-enter-new-card {
+          min-height: 54px;
+          max-height: 162px;
+        }
       }
       
     }
